<resources>
    <string name="app_name">portafogliomedico</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Username</string>
    <string name="nav_header_subtitle">TAXCODE</string>
    <string name="nav_header_desc">Portafoglio Medico</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_vault">Vault</string>
    <string name="menu_memos">Memos</string>
    <string name="menu_settings">Settings</string>
    <string name="test_database">Test database</string>
    <string name="addToDatabaseButton">Add</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_string">"Bentornato, "</string>
    <string name="book_medicine_label">Ordina medicine</string>
    <string name="vault_label">Cassaforte</string>
    <string name="memo_label">Promemoria</string>
    <string name="search_label">Cerca</string>
    <string name="settings_string">Impostazioni</string>
    <string name="modify_account_label">Modifica profilo</string>
    <string name="night_mode_label">Modalità Notte</string>
    <string name="notifications_label">Notifiche</string>
    <string name="change_pin_label">Cambia Pin</string>
    <string name="prenota">Prenota</string>
</resources>