<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/vault"
            android:title="@string/menu_vault" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/memo"
            android:title="@string/menu_memos" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/gear"
            android:title="@string/menu_settings" />
    </group>
</menu>