<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.memos.MemosFragment">


    <TextView
        android:id="@+id/welcome_label_home"
        android:layout_width="120dp"
        android:layout_height="27dp"
        android:layout_marginTop="12dp"
        android:text="@string/book_medicine_label"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.862"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/widget_map" />

    <TextView
        android:id="@+id/search_label_home"
        android:layout_width="120dp"
        android:layout_height="27dp"
        android:layout_marginTop="12dp"
        android:text="@string/search_label"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.862"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/widget_vault" />

    <TextView
        android:id="@+id/vault_label_home"
        android:layout_width="120dp"
        android:layout_height="27dp"
        android:layout_marginTop="12dp"
        android:text="@string/vault_label"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/widget_search" />

    <TextView
        android:id="@+id/memo_label_home"
        android:layout_width="120dp"
        android:layout_height="27dp"
        android:layout_marginTop="12dp"
        android:text="@string/memo_label"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/widget_memo" />

    <ImageButton
        android:id="@+id/widget_search"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="40dp"
        android:background="@drawable/rounded_widget_selector"
        android:padding="30dp"
        android:scaleType="fitCenter"
        android:src="@drawable/vault"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.747" />

    <ImageButton
        android:id="@+id/widget_memo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="40dp"
        android:background="@drawable/rounded_widget_selector"
        android:padding="30dp"
        android:scaleType="fitCenter"
        android:src="@drawable/memo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.297" />

    <ImageButton
        android:id="@+id/widget_vault"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/rounded_widget_selector"
        android:padding="30dp"
        android:scaleType="fitCenter"
        android:src="@drawable/search_selected_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.297" />

    <ImageButton
        android:id="@+id/widget_map"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/rounded_widget_selector"
        android:padding="30dp"
        android:scaleType="fitCenter"
        android:src="@drawable/prescription_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.747" />

    <TextView
        android:id="@+id/welcome_string_home"
        android:layout_width="282dp"
        android:layout_height="35dp"
        android:text="@string/welcome_string"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/widget_memo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>