<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_account"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/purple_gradient"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:openDrawer="start">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/settings_string"
                    android:textColor="#FFFFFF"
                    android:textSize="23sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/user_icon" />

            <TextView
                android:id="@+id/username_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="Nome Utente"
                android:textColor="#FFFFFF"
                android:textSize="20dp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:paddingStart="30dp"
                android:layout_gravity="center"
                android:background="@drawable/roudn_back_secondary_1"
                android:text="@string/modify_account_label"
                android:textAllCaps="false"
                android:textColor="@color/primary"
                android:paddingEnd="30dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/round_back_white10_20"
                android:orientation="vertical"
                android:padding="15dp">

                <!-- Dark Mode/ Night Mode -->

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/nightMode"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/round__night_mode"
                        android:padding="12dp"
                        android:src="@drawable/white_mode" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@+id/nightMode"
                        android:text="@string/night_mode_label"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:switchMinWidth="50dp" />

                </RelativeLayout>


                <!-- Notification -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <ImageView
                        android:id="@+id/notificationIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/round_back_notification"
                        android:padding="12dp"
                        android:src="@drawable/notification" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@+id/notificationIcon"
                        android:text="@string/notifications_label"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:switchMinWidth="50dp" />

                </RelativeLayout>


                <!-- Change PIN -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <ImageView
                        android:id="@+id/changePinIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/round_back_lock"
                        android:padding="12dp"
                        android:src="@drawable/lock" />

                    <ImageView
                        android:id="@+id/changePinArrow"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="12dp"
                        android:background="@drawable/round__night_mode"
                        android:padding="12dp"
                        android:rotationY="-180"
                        android:src="@drawable/back_btn" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@+id/changePinIcon"
                        android:text="@string/change_pin_label"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold" />

                </RelativeLayout>


            </LinearLayout>

        </LinearLayout>

    </ScrollView>
    <!--
    <include
        android:id="@+id/app_bar_main"
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer" />
        -->

</LinearLayout>